autocomplete now appropriately inserts space or a new line, depending on what is being typed; slightly improved link b/w RTL and instructions (event delegation; css changes); fixed bug with auto transcript by using threshold (i.e. if the user scrolls down more than 99% of the element it will lock the scrollbar to the bottom of the element)

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -297,7 +297,7 @@ footer {
 	font-family: sans-serif;
 }
 
-.instruction-register-log {
+.finished-instruction {
     border-bottom: 1px solid grey;
 }
 
